# review-and-assessment-powered-by-intelligent-documentation

./: .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  LOCAL_DEVELOPMENT.md  PLAN.md  README.md  UC008-LAMBDA-EVENT-FORMAT-FIX.md  bin.sh  deploy.yml
.amazonq/rules/: backend.md
.claude/skills/: build-and-format.md  plan-backend-frontend.md
.claude/skills/add-example/: SKILL.md  package.json  pyproject.toml
.claude/skills/add-example/references/: PDF-DESIGN.md
.claude/skills/add-example/scripts/: convert_html_to_pdf.js  create_aws_security_audit_pdfs.py  example_pdf_templates.py  generate_thumbnails.py
backend/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json
backend/src/review-workflow/review-item-processor/: .dockerignore  .gitignore  Dockerfile  agent.py  index.py  lambda_function_client.py  pyproject.toml
backend/src/review-workflow/review-item-processor/tests/: test_citation.py  test_lambda_function_client.py
cdk/: .gitignore  README.md  cdk.context.json  outputs.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: parameter.ts  (+2 more)
docs/: mcp-integration-remaining-tasks.md
frontend/: Dockerfile  docker-entrypoint.sh  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.ts
next-action-generator/: .dockerignore  agent.py  index.py  logger.py  model_config.py  pyproject.toml  template_expander.py
next-action-generator/tools/: factory.py  mcp_tool.py
review-item-processor/: .gitignore  Dockerfile  PROMPT_IMPROVEMENT_PROPOSAL.md  agent.py  index.py  logger.py  model_config.py  pyproject.toml  test_agent.py  test_agentcore.py  test_citation_real.py  test_mcp.py  tool_history_collector.py  utils.py
review-item-processor/evals/: README.md  __init__.py  evaluators.py  experiments.py  generate_ja_pdf.py  metrics.py  wrapper.py
review-item-processor/evals/examples/: floor_plan_hitl_suite.json  generate_pdf.py  quick_start_suite.json
review-item-processor/evals/ja/: README.md
review-item-processor/evals/ja/examples/: floor_plan_hitl_suite.json  generate_pdf.py  quick_start_suite.json
review-item-processor/evals/ja/my_tests/: template.json
review-item-processor/evals/my_tests/: README.md  template.json
review-item-processor/evals/scripts/: __init__.py  run_eval.py
review-item-processor/tests/: test_citation.py
review-item-processor/tools/: code_interpreter.py  factory.py  knowledge_base.py  mcp_tool.py
(+227 files in other folders)
