[tool.poetry]
name = "review-item-processor"
version = "0.1.0"
description = "Review Item Processor for Strands Agent"
authors = ["aws-samples <https://github.com/aws-samples>"]

[tool.poetry.dependencies]
python = "^3.13"
strands-agents = ">=1.7.0"
strands-agents-tools = ">=0.2.6"
pillow = ">=11.2.1"
boto3 = ">=1.40.22"
anyio = ">=4.0.0"
mcp = ">=1.0.0"
pydantic = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"